# Turkey_EQ_practice

./: .coverage  .gitignore  README.md  hello.txt  pyproject.toml  sql_DB.db  turkey_eq-1.4-py3-none-any.whl
app/: database.py  db_wiring.py  endpoints.py  main.py
app/database/: crud.py  endpoints.py  eq_monitor.db  models.py  schemas.py  users.db
app/db/: eq_monitor.db
app/tests/: test_client.py  test_db.db
app/users/user1/test/: pra.txt
