[tool.poetry]
name = "Turkey_EQ_practice"
version = "0.1.0"
description = "Data product to study earthquake effects"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "readme"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
unicorn = {extras = ["standart"], version = "^2.0.1.post1"}
pydantic = {extras = ["email"], version = "^1.10.9"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
